# brightwheel

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
assets/: brightwheel.rc
src/: autostart.rs  cli.rs  error.rs  hdr.rs  lib.rs  main.rs  wide.rs
src/ddc/: mod.rs  windows.rs
src/tray/: brightness_icon.rs  gesture.rs  main.rs  platform.rs  runtime.rs  tray_icon.rs
