[package]
name = "brightwheel"
version = "0.1.4"
edition = "2024"
description = "Windows tray utility for DDC/CI monitor brightness and HDR control"
license = "MIT"
repository = "https://github.com/qqrm/brightwheel"
homepage = "https://github.com/qqrm/brightwheel"
readme = "README.md"
keywords = ["windows", "monitor", "brightness", "ddc-ci", "tray"]
categories = ["command-line-utilities", "gui", "hardware-support", "os::windows-apis"]
rust-version = "1.85"
publish = ["crates-io"]
autobins = false
include = [
    "/.cargo/config.toml",
    "/assets/brightwheel.ico",
    "/assets/brightwheel.rc",
    "/build.rs",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]

[[bin]]
name = "bright"
path = "src/main.rs"

[[bin]]
name = "brightwheel"
path = "src/tray/main.rs"

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
doc_markdown = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"
undocumented_unsafe_blocks = "warn"

[profile.dev]
incremental = false

[profile.test]
incremental = false

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
